--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "json2csv",
+  "name": "json2csv-clickhouse",
   "version": "5.0.3",
-  "description": "Convert JSON to CSV",
+  "description": "Convert JSON to CSV. Export Array compliant with Clickhouse import. Forked from json2csv",
   "keywords": [
     "json",
     "to",
@@ -11,9 +11,8 @@
     "parse"
   ],
   "author": {
-    "name": "Mirco Zeiss",
-    "email": "mirco.zeiss@gmail.com",
-    "twitter": "zeMirco"
+    "name": "XiChi Zhu",
+    "email": "kilik52@outlook.com"
   },
   "license": "MIT",
   "bin": {
@@ -24,9 +23,9 @@
   "browser": "dist/json2csv.umd.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zemirco/json2csv"
+    "url": "https://github.com/enteve/json2csv"
   },
-  "homepage": "http://zemirco.github.io/json2csv",
+  "homepage": "https://github.com/enteve/json2csv",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -36,7 +35,7 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "deploy:docs": "docpress b && gh-pages -d _docpress",
     "prepublish": "in-publish && npm run before:publish || not-in-publish",
-    "before:publish": "npm test && npm run build && npm run deploy:docs",
+    "before:publish": "npm test && npm run build",
     "release": "standard-version"
   },
   "dependencies": {
